<resources>
    <string name="app_name">Софбус 24</string>
    <string name="app_sofbus24">Софбус 24</string>
    <string name="app_navigation_drawer_open">Отвори</string>
    <string name="app_navigation_drawer_close">Затвори</string>
    <string name="app_img_empty_content_description" />
    <string name="app_button_ok">OK</string>
    <string name="app_button_save">Запази</string>
    <string name="app_button_confirm">Потвърди</string>
    <string name="app_button_cancel">Отказ</string>
    <string name="app_button_yes">Да</string>
    <string name="app_button_no">Не</string>
    <string name="app_button_update">Обнови</string>
    <string name="app_button_install">Инсталирай</string>
    <string name="app_button_activate">Активирай</string>
    <string name="app_button_later">По-късно</string>
    <string name="app_button_restart">Рестарт</string>
    <string name="app_button_email">Имейл</string>
    <string name="app_button_exit">Изход</string>
    <string name="app_dialog_title_info">Информация</string>
    <string name="app_dialog_title_important">Важно</string>
    <string name="app_dialog_title_error">Грешка</string>
    <string name="app_database_error" formatted="false"><![CDATA[Възникна неочакван проблем при стартирането на <b><i>Софбус 24</i></b>. Моля опитайте отново като <b><i>рестартирате</i></b> приложението. Ако грешката продължава да се появява, моля свържете се с мен чрез <b><i>имейл бутона</i></b> отдолу.]]></string>
    <string name="app_internet_error">Възникна грешка при извличането на информацията. Моля проверете вашата интернет връзка и опитайте отново.</string>
    <string name="app_info_error" formatted="false"><![CDATA[В момента сайта за градска мобилност не предоставя информация за <b>%s</b>. Моля опитайте пак по-късно.]]></string>
    <string name="app_captcha_error" formatted="false"><![CDATA[Трябва да въведете символите от изображението (<b>captcha код</b>), за да преминете теста за сигурност на <b>СКГТ</b> и да извлечете нужната информация.]]></string>
    <string name="app_internet_or_info_error">В момента няма намерена информация. Моля проверете вашата интернет връзка или опитайте по-късно.</string>
    <string name="app_loading_current_location" formatted="false"><![CDATA[Локализиране на текущото местоположение...]]></string>
    <string name="app_loading_closest_station" formatted="false"><![CDATA[Търсене на най-близката спирка...]]></string>
    <string name="app_location_access_error" formatted="false"><![CDATA[Моля активирайте опцията <b><i>\"Достъп до местоположението ми\"</i></b>, за да може <b><i>Софбус 24</i></b> да използва информация за вашата локация.]]></string>
    <string name="app_location_modules_error">Моля включете поне едно от устройствата (Network, WiFi или GPS), за да бъде засечено текущото ви местоположение.</string>
    <string name="app_location_timeout_error">Намирането на текущото местоположение продължи твърде дълго. Моля опитайте отново.</string>
    <string name="app_location_modules_timeout_error">Намирането на текущото местоположение продължи твърде дълго или всички локализиращи модули са изключени (Network, WiFi или GPS). Моля включете някой от тях и опитайте отново.</string>
    <string name="app_nearest_station_init_error">Намирането на най-близката до вас спирка беше неуспешно. По подразбиране ще бъде използвана най-близката до центъра на София.</string>
    <string name="app_nearest_station_modules_error">Моля включете поне едно от устройствата (Network, WiFi или GPS), за да бъде намерена най-близката до вас спирка и опитайте отново.</string>
    <string name="app_nearest_station_timeout_error">Намирането на най-близката до вас спирка продължи твърде дълго. Моля опитайте отново.</string>
    <string name="app_location_timeout_map_error">Намирането на текущото местоположение продължи твърде дълго. Картата ще бъде позиционирана върху центъра на София, докато бъдете локализирани.</string>
    <string name="app_coordinates_error">Спирката не може да бъде визуализирана (не са намерени нейните координати в базата от данни).</string>
    <string name="app_no_station_selected_error">Моля изберете спирка от картата, за да бъде визуализирана чрез режима Google Street View.</string>
    <string name="app_distance" formatted="false">Разстояние: ~%s</string>
    <string name="app_distance_none">Разстояние: ∞ (изчислява се&#8230;)</string>
    <string name="app_distance_meters">м</string>
    <string name="app_distance_kilometers">км&#160;</string>
    <string name="app_remaining_minutes">м</string>
    <string name="app_remaining_hours">ч</string>
    <string name="app_toast_add_favourites" formatted="false"><![CDATA[Спирката <b><i>%s (%s)</b></i> беше успешно добавена в <b>Любими</b>.]]></string>
    <string name="app_toast_remove_favourites" formatted="false"><![CDATA[Спирката <b><i>%s (%s)</b></i> беше успешно премахната от <b>Любими</b>.]]></string>
    <string name="app_toast_rename_favourites" formatted="false"><![CDATA[Спирката <b><i>%s (%s)</b></i> беше преименувана на <b><i>%s (%s)</b></i>.]]></string>
    <string name="app_google_play_titlte">Услуги за Google Play</string>
    <string name="app_google_play_msg">Услугите за Google Play, на които разчита Софбус 24 за показване на картата на Google Maps, не се поддържат от устройството Ви. Моля, инсталирайте ги, за да продължите.</string>
    <string name="app_google_street_view_title">Google Street View</string>
    <string name="app_google_street_view_msg">Услугите за Google Play, на които разчита Софбус 24 за показване на Google Street View, не се поддържат от устройството Ви. Моля, инсталирайте ги, за да продължите.</string>
    <string name="app_send_email_subject">Проблем при стартирането на Софбус 24</string>
    <string name="app_send_email_body" formatted="false"><![CDATA[Възникна неочакван проблем при стартирането на Софбус 24...]]></string>
    <string name="app_send_email_chooser">Изпращане на мейл</string>
    <string name="app_send_email_chooser_error">Възникна грешка, тъй като няма инсталирани мейл клиенти. Моля добавете, за да може да изпратите мейл.</string>
    <string name="action_droidtrans">Коли на СКГТ</string>
    <string name="action_recent_history">История</string>
    <string name="action_closest_stations">Най-близки спирки</string>
    <string name="action_closest_stations_map">Карта</string>
    <string name="action_closest_stations_list">Списък</string>
    <string name="action_more">Повече</string>
    <string name="action_favourites_sort">Сортирай</string>
    <string name="action_favourites_remove_all">Изтрий всички</string>
    <string name="action_metro_map_route">Маршрут</string>
    <string name="action_metro_schedule_site">ЦГМ Разписание</string>
    <string name="action_edit_tabs">Начален екран</string>
    <string name="action_clear_schedule_cache">Изчисти кеша</string>
    <string name="action_gm_map_favorites">Фаворити</string>
    <string name="action_gm_map_droidtrans">Коли на СКГТ</string>
    <string name="action_gm_map_clear">Изчисти</string>
    <string name="action_gm_map_route">Маршрут</string>
    <string name="action_gm_map_gsv">Street View</string>
    <string name="action_gm_map_traffic">Трафик</string>
    <string name="action_gm_map_mode">Режим на картата</string>
    <string name="action_gm_map_mode_normal">Нормален</string>
    <string name="action_gm_map_mode_terrain">Терен</string>
    <string name="action_gm_map_mode_satellite">Сателит</string>
    <string name="action_gm_map_mode_hybrid">Хибрид</string>
    <string name="action_ms_reset">Нулиране</string>
    <string name="action_ms_refresh">Обнови</string>
    <string name="action_ms_map">Карта</string>
    <string name="action_sm_google_street_view">Street View</string>
    <string name="action_sm_map_mode">Режим на картата</string>
    <string name="action_sm_map_mode_normal">Нормален</string>
    <string name="action_sm_map_mode_terrain">Терен</string>
    <string name="action_sm_map_mode_satellite">Сателит</string>
    <string name="action_sm_map_mode_hybrid">Хибрид</string>
    <string name="action_edit_tabs_reset">Нулиране</string>
    <string name="action_pref_reset">Нулиране</string>
    <string name="action_pref_info_details">Информация</string>
    <string name="action_about_update_db">Обновяване на спирките</string>
    <string name="action_about_update_app">Проверка за нова версия</string>
    <string name="action_cs_list_refresh">Обнови</string>
    <string name="action_cs_list_map">Карта</string>
    <string name="action_vb_time_favourites">Добави в Любими</string>
    <string name="action_vb_time_refresh">Обнови</string>
    <string name="action_vb_time_map">Карта</string>
    <string name="action_pt_route_map">Маршрут</string>
    <string name="action_pt_site">ЦГМ Разписание</string>
    <string name="action_pt_reset">Нулиране</string>
    <string name="action_pt_refresh">Обнови</string>
    <string name="action_pt_map">Карта</string>
    <string name="action_history_top">Най-отгоре</string>
    <string name="action_history_delete_all">Изтрий всички</string>
    <string name="action_droidtrans_favourites">Фаворити</string>
    <string name="action_droidtrans_reset">Локализирай</string>
    <string name="action_web_page_home">Начало</string>
    <string name="action_web_page_refresh">Обнови</string>
    <string name="action_route_changes_top">Най-отгоре</string>
    <string name="action_route_changes_refresh">Обнови</string>
    <string name="action_route_changes_copy_link">Копирай линк</string>
    <string name="action_route_changes_open_browser">Отвори в браузър</string>
    <string name="menu_fav_rename">Преименувай</string>
    <string name="menu_fav_remove">Премахни</string>
    <string name="menu_fav_google_maps">Google Maps</string>
    <string name="menu_fav_google_street_view">Street View</string>
    <string name="menu_fav_information">Информация</string>
    <string name="menu_metro_station_title">Изберете действие</string>
    <string name="menu_metro_station_add">Добави в Любими</string>
    <string name="menu_metro_station_remove">Премахни от Любими</string>
    <string name="menu_metro_station_map">Виж на картата</string>
    <string name="cs_list_title">Най-близки спирки</string>
    <string name="cs_list_search_hint">Търсене по име или номер</string>
    <string name="cs_list_item_empty_list">Няма намерени спирки в радиус от 100 км. за това търсене. Моля опитайте с други критерии или се приближете до София.</string>
    <string name="pref_category_common">ОБЩИ</string>
    <string name="pref_category_common_language_title">Език</string>
    <string name="pref_category_common_language_summary">Избор на език</string>
    <string name="pref_category_visual">ВИЗУАЛНИ</string>
    <string name="pref_category_visual_fav_title">Фаворити</string>
    <string name="pref_category_visual_fav_summary">Визуализиране на фаворитите чрез Google Street View (начален екран)</string>
    <string name="pref_category_stations">ИНФОРМАЦИЯ ЗА СПИРКИ</string>
    <string name="pref_category_stations_timeType_title">Извлечена информация</string>
    <string name="pref_category_stations_timeType_summary">Оставащо време или времена на пристигане</string>
    <string name="pref_category_stations_timeSource_title">Времена на градския транспорт</string>
    <string name="pref_category_stations_timeSource_summary">Определяне на кое време да се използва за показване/пресмятане на извлечената информация</string>
    <string name="pref_category_map">КАРТА</string>
    <string name="pref_category_map_radius_title">Радиус около текущото местоположение</string>
    <string name="pref_category_map_radius_summary">Големина на радиуса около текущото местоположение или избрана точка, в който се визуализират спирки</string>
    <string name="pref_category_map_position_title">Позициониране</string>
    <string name="pref_category_map_position_summary">Позициониране на картата при промяна на текущото местоположение</string>
</resources>