<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_category_common" >
        <ListPreference
            android:defaultValue="bg"
            android:entries="@array/languagenChoice"
            android:entryValues="@array/languagenChoiceValues"
            android:key="appLanguage"
            android:summary="@string/pref_category_common_language_summary"
            android:title="@string/pref_category_common_language_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="favouritesExpandedCategory"
        android:title="@string/pref_category_visual" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="favouritesExpanded"
            android:summary="@string/pref_category_visual_fav_summary"
            android:title="@string/pref_category_visual_fav_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_stations" >
        <ListPreference
            android:defaultValue="timeRemaining"
            android:entries="@array/timeType"
            android:entryValues="@array/timeTypeValues"
            android:key="timeType"
            android:summary="@string/pref_category_stations_timeType_summary"
            android:title="@string/pref_category_stations_timeType_title" />
        <ListPreference
            android:defaultValue="timeSkgt"
            android:entries="@array/timeSource"
            android:entryValues="@array/timeSourceValues"
            android:key="timeSource"
            android:summary="@string/pref_category_stations_timeSource_summary"
            android:title="@string/pref_category_stations_timeSource_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_map" >
        <ListPreference
            android:defaultValue="600"
            android:entries="@array/stationsRadius"
            android:entryValues="@array/stationsRadiusValues"
            android:key="stationsRadius"
            android:summary="@string/pref_category_map_radius_summary"
            android:title="@string/pref_category_map_radius_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="positionFocus"
            android:summary="@string/pref_category_map_position_summary"
            android:title="@string/pref_category_map_position_title" />
    </PreferenceCategory>

</PreferenceScreen>